--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ devices/BFDaemon/BFDaemon_BASE_3312.py
 devices/BFDaemon/BFDaemon_BACKUP_9904.py
 devices/BFDaemon/BFDaemon_BACKUP_3312.py
 devices/BFDaemon/BFDaemon.py.orig
-
+/doc_gen/_build
 
 
 
