--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 
 script: 
   # run tests TODO: add code coverage information
-  - pytest #--cov=src
+  - pytest tests #--cov=src
   # - codecov
 
   # # test pip installation
