Ah! setup.py working now

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ require-python-3
 scipy>=1.2.1
 lmfit>=0.9.13
 PyVISA-py>=0.3.1
-git+git://github.com/steelelab-delft/stlabutils.git#egg=stlabutils
+stlabutils @ git+git://github.com/steelelab-delft/stlabutils.git#egg=stlabutils
